'Plus' button now adds ingredients to the navigation bar...also, fixed overflow text bug on landing page

--- a/components/css/main.css
+++ b/components/css/main.css
@@ -109,3 +109,7 @@ input{
 .flexChild:hover{
   opacity: .8;
 }
+.shrink-sides{
+  margin-left: 5%;
+  margin-right: 5%;
+}
